# Try_DEG_Pipeline

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: airway.yaml  example_project.yaml
data/fixtures/: toy_annotation.tsv  toy_counts.tsv  toy_go_map.tsv  toy_metadata.tsv
docs/: rnaseq_deg_pipeline_implementation_plan.md  rnaseq_deg_pipeline_swot_review.md
results/: .gitkeep
scripts/: 00_fetch_airway.py  01_validate_inputs.py  02_qc_counts.py  03_filter_normalize.py  04_run_pydeseq2.py  05_validate_airway_pydeseq2.py  06_make_deg_outputs.py  07_run_go_enrichment.py  08_make_report.py  run_pipeline.py
src/deg_pipeline/: __init__.py  config.py  deg.py  enrichment.py  filtering.py  io.py  logging_utils.py  plotting.py  pydeseq2_adapter.py  qc.py  report.py  validation.py
src/deg_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/smoke/: __init__.py  test_01_validate_inputs_smoke.py  test_04_run_pydeseq2_smoke.py  test_remaining_scripts_smoke.py
tests/unit/: __init__.py  test_deg_outputs.py  test_filter_normalize.py  test_filtering.py  test_go_enrichment.py  test_pydeseq2_adapter.py  test_qc_counts.py  test_report.py  test_run_pipeline.py  test_validate_inputs.py
