[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deg-pipeline"
version = "0.1.0"
description = "Reproducible RNA-seq DEG analysis pipeline using PyDESeq2"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Try DEG Pipeline Contributors"}
]
keywords = ["bioinformatics", "rna-seq", "differential-expression", "deseq2", "pydeseq2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "pydeseq2>=0.4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "jinja2>=3.1.0",
    "goatools>=1.3.0",
    "markdown>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
interactive = [
    "plotly>=5.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
deg_pipeline = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_r: marks tests that require R and Bioconductor packages",
    "airway: marks tests that use the full airway dataset",
    "slow: marks slow tests",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
